fixed some alignment problems

--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 h1 {
+	padding-top: 5px;
 	margin-bottom: 25px;
 	font-size: 2.4rem;
 }
@@ -19,13 +20,14 @@ h1 {
 	width: 200px;
 	height: auto;
 	float: left;
+	margin-top: 50px;
 }
 
 .soccer-about {
 	width: 200px;
 	height: auto;
 	float: left;
-	margin-top: 50px;
+	margin-top: 100px;
 }
 
 .navbar {
@@ -60,6 +62,7 @@ div a{
 
 .content {
 	text-align: justify;
+	padding-top: 25px;
 }
 
 ul {
@@ -74,7 +77,7 @@ li {
 .image-wrapper {
 	width: 250px;
 	float: left;
-	margin-left: 25px;
+	margin-left: 75px;
 }
 
 .italic {
@@ -83,7 +86,7 @@ li {
 }
 
 h3 {
-	margin-left: 275px;
+	margin-left: 350px;
 	margin-bottom: 0;
 }
 
@@ -91,7 +94,7 @@ h2 {
 	text-decoration: underline;
 }
 .indent {
-	margin-left: 275px;
+	margin-left: 350px;
 	margin-bottom: 0;
 	margin-top: 0;
 }
@@ -107,8 +110,8 @@ h2 {
 	padding: 50px;
 	text-align: center;
 	float: right;
-	margin-right: 50px;
-	margin-top: 50px;
+	margin-right: 25px;
+	margin-top: 100px;
 }
 
 .content-border-home {
@@ -119,6 +122,6 @@ h2 {
 	text-align: center !important;
 	align-items: center;
 	float: right;
-	margin-right: 100px;
+	margin-right: 50px;
 	margin-top: 50px;
 }
